# portfolio-rag-web

./: .env.example  .gitignore  README.ko.md  README.md  docker-compose.yml  package-lock.json  run-playwright-regression.js
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  test_db.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_add_comments_table.py  0003_add_notices_and_is_admin.py  1ff3075b3f12_add_user_role_and_notifications.py  c40a4c2ac226_add_user_notification_states.py  cf93e56fe31b_change_varchar_length.py  de23b17c566d_db_update.py  fd5f9586240f_add_user_avatar_url.py
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  bookmarks.py  categories.py  chat.py  comments.py  contents.py  export.py  health.py  notices.py  notifications.py  statistics.py  youtubers.py
backend/app/auth/: service.py
backend/app/data/: bookmarks_repository.py  comments_repository.py  database.py  ingest.py  models.py  repository.py  schemas.py  seed.py  seed_data.py  statistics_repository.py  users_repository.py
backend/app/llm/: chat_service.py  embedding_service.py  protocols.py  stub_chat_service.py  vector_store.py
backend/app/services/: email.py
backend/docs/: openapi.yaml
backend/scripts/: start.sh
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_database.py  test_health.py  test_models.py
docs/: BRAND.md
frontend/: .env.local.example  .gitignore  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  (+4 more)
(+99 files in other folders)
