[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "portfolio-backend"
version = "0.1.0"
description = "FastAPI backend for the Portfolio project"
authors = [{ name = "Portfolio Team" }]
license = { text = "Proprietary" }
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "pyjwt>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "pwdlib[argon2]>=0.2.0",
  "google-auth>=2.35.0",
  "python-jose>=3.3.0",
  "cachetools>=5.3.0",
  "qdrant-client>=1.7.0,<1.8.0",
  "orjson>=3.10.7",
  "openai>=1.0.0",
  "resend>=2.0.0",
]


[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "aiosqlite>=0.20.0"
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "aiosqlite>=0.20.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["F401", "I001", "W292"]